--- a/environment.yml
+++ b/environment.yml
@@ -1,39 +1,32 @@
-name: ar_tutorial
+name: ar_tutorial_2
 channels:
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.13=hb9d3cd8_0
+  - bottleneck=1.3.5=py37hda87dfa_0
   - brotli=1.1.0=hb9d3cd8_2
   - brotli-bin=1.1.0=hb9d3cd8_2
   - bzip2=1.0.8=h4bc722e_7
   - ca-certificates=2024.8.30=hbcca054_0
-  - cairo=1.18.0=hebfffa5_3
   - certifi=2024.8.30=pyhd8ed1ab_0
-  - contourpy=1.3.1=py313h33d0bda_0
-  - cycler=0.12.1=pyhd8ed1ab_1
-  - cyrus-sasl=2.1.27=h54b06d7_7
+  - cycler=0.11.0=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
-  - double-conversion=3.3.0=h59595ed_0
   - expat=2.6.4=h5888daf_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_3
-  - fontconfig=2.15.0=h7e30c49_1
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.55.1=py313h8060acc_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonttools=4.38.0=py37h540881e_0
   - freetype=2.12.1=h267a509_2
-  - graphite2=1.3.13=h59595ed_1003
-  - harfbuzz=9.0.0=hda332d3_1
-  - icu=75.1=he02047a_0
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.7=py313h33d0bda_0
-  - krb5=1.21.3=h659f571_0
-  - lcms2=2.16=hb7c19ff_0
+  - glib=2.80.2=hf974151_0
+  - glib-tools=2.80.2=hb6ce0ca_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - icu=58.2=hf484d3e_1000
+  - importlib-metadata=4.11.4=py37h89c1867_0
+  - importlib_metadata=4.11.4=hd8ed1ab_0
+  - jpeg=9e=h0b41bf4_3
+  - kiwisolver=1.4.4=py37h7cecad7_0
+  - lcms2=2.14=h6ed2654_0
   - ld_impl_linux-64=2.43=h712a8e2_2
   - lerc=4.0.0=h27087fc_0
   - libblas=3.9.0=25_linux64_openblas
@@ -41,108 +34,72 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=25_linux64_openblas
-  - libclang-cpp19.1=19.1.5=default_hb5137d0_0
-  - libclang13=19.1.5=default_h9c6a7e4_0
-  - libcups=2.3.3=h4637d8d_4
-  - libdeflate=1.22=hb9d3cd8_0
-  - libdrm=2.4.123=hb9d3cd8_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libegl=1.7.0=ha4b6fd6_2
+  - libdeflate=1.14=h166bdaf_0
   - libexpat=2.6.4=h5888daf_0
   - libffi=3.4.2=h7f98852_5
   - libgcc=14.2.0=h77fa898_1
   - libgcc-ng=14.2.0=h69a702a_1
   - libgfortran=14.2.0=h69a702a_1
   - libgfortran5=14.2.0=hd5240d6_1
-  - libgl=1.7.0=ha4b6fd6_2
-  - libglib=2.82.2=h2ff4ddf_0
-  - libglvnd=1.7.0=ha4b6fd6_2
-  - libglx=1.7.0=ha4b6fd6_2
+  - libglib=2.80.2=hf974151_0
   - libgomp=14.2.0=h77fa898_1
   - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=25_linux64_openblas
-  - libllvm19=19.1.5=ha7bfdaf_0
   - liblzma=5.6.3=hb9d3cd8_1
   - liblzma-devel=5.6.3=hb9d3cd8_1
-  - libmpdec=4.0.0=h4bc722e_0
-  - libntlm=1.4=h7f98852_1002
+  - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.28=pthreads_h94d23a6_1
-  - libopengl=1.7.0=ha4b6fd6_2
-  - libpciaccess=0.18=hd590300_0
-  - libpng=1.6.44=hadc24fc_0
-  - libpq=17.2=h04577a9_0
-  - libsqlite=3.47.0=hadc24fc_1
+  - libpng=1.6.43=h2797004_0
+  - libsqlite=3.46.0=hde9e2c9_0
   - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=14.2.0=h4852527_1
-  - libtiff=4.7.0=he137b08_1
+  - libtiff=4.4.0=h82bc61c_5
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
-  - libxcb=1.17.0=h8a09558_0
-  - libxkbcommon=1.7.0=h2c5496b_1
-  - libxml2=2.13.5=hb346dea_0
-  - libxslt=1.1.39=h76b75d6_0
-  - libzlib=1.3.1=hb9d3cd8_2
-  - matplotlib=3.9.3=py313h78bf25f_0
-  - matplotlib-base=3.9.3=py313h129903b_0
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.9=h13577e0_2
+  - libzlib=1.2.13=h4ab18f5_6
+  - matplotlib=3.5.3=py37h89c1867_2
+  - matplotlib-base=3.5.3=py37hf395dca_2
   - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=9.0.1=h266115a_2
-  - mysql-libs=9.0.1=he0572af_2
   - ncurses=6.5=he02047a_1
-  - numpy=2.1.3=py313h4bf6692_0
-  - openjpeg=2.5.2=h488ebb8_0
-  - openldap=2.6.9=he970967_0
+  - nomkl=1.0=h5ca1d4c_0
+  - numexpr=2.8.3=py37h85a3170_100
+  - numpy=1.21.6=py37h976b520_0
+  - openjpeg=2.5.0=h7d73246_1
   - openssl=3.4.0=hb9d3cd8_0
-  - packaging=24.2=pyhd8ed1ab_2
-  - pandas=2.2.3=py313ha87cce1_1
-  - pathlib=1.0.1=py_1
-  - pcre2=10.44=hba22ea6_2
-  - pillow=11.0.0=py313h2d7ed13_0
-  - pip=24.3.1=pyh145f28c_0
-  - pixman=0.43.2=h59595ed_0
+  - packaging=23.2=pyhd8ed1ab_0
+  - pandas=1.3.5=py37he8f5f7f_0
+  - pathlib=1.0.1=py37h89c1867_6
+  - pcre2=10.43=hcad00b1_0
+  - pillow=9.2.0=py37h850a105_2
+  - pip=24.0=pyhd8ed1ab_0
   - pthread-stubs=0.4=hb9d3cd8_1002
-  - pyparsing=3.2.0=pyhd8ed1ab_2
-  - pyside6=6.8.0.2=py313h5f61773_0
-  - python=3.13.1=ha99a958_101_cp313
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python-tzdata=2024.2=pyhd8ed1ab_1
-  - python_abi=3.13=5_cp313
-  - pytz=2024.1=pyhd8ed1ab_0
-  - qhull=2020.2=h434a139_5
-  - qt6-main=6.8.0=h6e8976b_0
+  - pyparsing=3.1.4=pyhd8ed1ab_0
+  - pyqt=5.6.0=py37h13b7fb3_1008
+  - python=3.7.12=hf930737_100_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python_abi=3.7=4_cp37m
+  - pytz=2024.2=pyhd8ed1ab_0
+  - qt=5.6.3=h8bf5577_3
   - readline=8.2=h8228510_1
-  - six=1.17.0=pyhd8ed1ab_0
+  - setuptools=59.8.0=py37h89c1867_1
+  - sip=4.18.1=py37hf484d3e_1000
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.46.0=h6d4b2fc_0
   - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.4.2=py313h536fd9c_0
-  - tzdata=2024b=hc8b5060_0
-  - wayland=1.23.1=h3e06ad9_0
-  - xarray=2024.11.0=pyhd8ed1ab_0
-  - xcb-util=0.4.1=hb711507_2
-  - xcb-util-cursor=0.1.5=hb9d3cd8_0
-  - xcb-util-image=0.4.0=hb711507_2
-  - xcb-util-keysyms=0.4.1=hb711507_0
-  - xcb-util-renderutil=0.3.10=hb711507_0
-  - xcb-util-wm=0.4.2=hb711507_0
-  - xkeyboard-config=2.43=hb9d3cd8_0
-  - xorg-libice=1.1.1=hb9d3cd8_1
-  - xorg-libsm=1.2.4=he73a12e_1
-  - xorg-libx11=1.8.10=h4f16b4b_1
+  - tornado=6.2=py37h540881e_0
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - unicodedata2=14.0.0=py37h540881e_1
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xarray=0.20.2=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb9d3cd8_1
-  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
-  - xorg-libxcursor=1.2.3=hb9d3cd8_0
-  - xorg-libxdamage=1.1.6=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xorg-libxext=1.3.6=hb9d3cd8_0
-  - xorg-libxfixes=6.0.1=hb9d3cd8_0
-  - xorg-libxi=1.8.2=hb9d3cd8_0
-  - xorg-libxrandr=1.5.4=hb9d3cd8_0
-  - xorg-libxrender=0.9.11=hb9d3cd8_1
-  - xorg-libxtst=1.2.5=hb9d3cd8_3
-  - xorg-libxxf86vm=1.1.5=hb9d3cd8_4
-  - xorg-xorgproto=2024.1=hb9d3cd8_1
   - xz=5.6.3=hbcc6ac9_1
   - xz-gpl-tools=5.6.3=hbcc6ac9_1
   - xz-tools=5.6.3=hb9d3cd8_1
-  - zlib=1.3.1=hb9d3cd8_2
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h4ab18f5_6
   - zstd=1.5.6=ha6fb4c9_0
-prefix: /srv/conda/envs/ar_tutorial
+prefix: /srv/conda/envs/ar_tutorial_2
