--- a/environment.yml
+++ b/environment.yml
@@ -1,319 +1,182 @@
-name: /home/jovyan/envs/antarctic_ars
+name: ar_tutorial_2
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.12=h4ab18f5_0
-  - asciitree=0.3.3=py_2
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - aws-c-auth=0.7.25=hff137af_5
-  - aws-c-cal=0.7.3=h7970872_0
-  - aws-c-common=0.9.25=h4bc722e_0
-  - aws-c-compression=0.2.18=hc649ecc_8
-  - aws-c-event-stream=0.4.2=h04a40c0_20
-  - aws-c-http=0.8.7=he2d3600_3
-  - aws-c-io=0.14.18=h7d46f39_3
-  - aws-c-mqtt=0.10.4=h674cf7e_16
-  - aws-c-s3=0.6.4=h28a8003_7
-  - aws-c-sdkutils=0.1.19=hc649ecc_0
-  - aws-checksums=0.1.18=hc649ecc_8
-  - aws-crt-cpp=0.27.5=heec6497_6
-  - aws-sdk-cpp=1.11.379=he20dfa5_2
-  - azure-core-cpp=1.13.0=h935415a_0
-  - azure-identity-cpp=1.8.0=hd126650_2
-  - azure-storage-blobs-cpp=12.12.0=hd2e3451_0
-  - azure-storage-common-cpp=12.7.0=h10ac4d7_1
-  - azure-storage-files-datalake-cpp=12.11.0=h325d260_1
-  - blosc=1.21.6=hef167b5_0
-  - bokeh=3.5.1=pyhd8ed1ab_0
-  - boto3=1.35.23=pyhd8ed1ab_0
-  - brotli=1.1.0=hd590300_1
-  - brotli-bin=1.1.0=hd590300_1
-  - brotli-python=1.1.0=py312h30efb56_1
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_4
+  - backports.functools_lru_cache=2.0.0=pyhd8ed1ab_0
+  - blas=1.0=openblas
+  - blosc=1.21.5=hc2324a3_1
+  - bokeh=2.4.3=py37h06a4308_0
+  - bottleneck=1.3.5=py37hda87dfa_0
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.33.0=ha66036c_0
-  - c-blosc2=2.15.1=hc57e6cf_0
-  - ca-certificates=2024.8.30=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cairo=1.18.0=hebfffa5_3
-  - cartopy=0.23.0=py312h1d6d2e6_1
+  - c-ares=1.34.3=hb9d3cd8_1
+  - ca-certificates=2024.11.26=h06a4308_0
+  - cached-property=1.5.2=py_0
   - certifi=2024.8.30=pyhd8ed1ab_0
-  - cffi=1.17.0=py312h1671c18_0
-  - cftime=1.6.4=py312h085067d_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - click=8.1.7=unix_pyh707e725_0
-  - cloudpickle=3.0.0=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.2.1=py312h8572e83_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=0.12.3=py312h98912ed_0
-  - dask=2024.8.0=pyhd8ed1ab_0
-  - dask-core=2024.8.0=pyhd8ed1ab_0
-  - dask-expr=1.1.10=pyhd8ed1ab_0
+  - cftime=1.5.1.1=py37hce1f21e_0
+  - click=8.0.4=py37h06a4308_0
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
+  - curl=8.8.0=he654da7_1
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cytoolz=0.12.0=py37h5eee18b_0
+  - dask=2.12.0=py_0
+  - dask-core=2.12.0=py_0
   - dbus=1.13.6=h5008d03_3
-  - debugpy=1.8.5=py312hca68cad_0
+  - debugpy=1.6.3=py37hd23a5d3_0
   - decorator=5.1.1=pyhd8ed1ab_0
-  - distributed=2024.8.0=pyhd8ed1ab_0
-  - double-conversion=3.3.0=h59595ed_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - expat=2.6.2=h59595ed_0
-  - fasteners=0.17.3=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_2
+  - distributed=2.12.0=py37_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - expat=2.6.4=h5888daf_0
+  - fftw=3.3.9=h5eee18b_2
   - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.53.1=py312h41a817b_0
+  - fonttools=4.38.0=py37h540881e_0
   - freetype=2.12.1=h267a509_2
-  - geos=3.12.2=he02047a_1
-  - gflags=2.2.2=he1b5a44_1004
-  - glog=0.7.1=hbabe93e_0
-  - graphite2=1.3.13=h59595ed_1003
-  - h2=4.1.0=pyhd8ed1ab_0
-  - h5netcdf=1.3.0=pyhd8ed1ab_0
-  - h5py=3.11.0=nompi_py312hb7ab980_102
-  - harfbuzz=9.0.0=hda332d3_1
-  - hdf4=4.2.15=h2a13503_7
-  - hdf5=1.14.3=nompi_hdf9ad27_105
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - icu=75.1=he02047a_0
-  - idna=3.10=pyhd8ed1ab_0
-  - importlib-metadata=8.2.0=pyha770c72_0
-  - importlib_metadata=8.2.0=hd8ed1ab_0
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.26.0=pyh707e725_0
-  - ipywidgets=8.1.3=pyhd8ed1ab_0
+  - fsspec=2022.11.0=py37h06a4308_0
+  - glib=2.80.2=hf974151_0
+  - glib-tools=2.80.2=hb6ce0ca_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - h5netcdf=1.1.0=pyhd8ed1ab_1
+  - h5py=3.7.0=nompi_py37hf1ce037_101
+  - hdf4=4.2.15=h9772cbc_5
+  - hdf5=1.12.2=nompi_h4df4325_101
+  - heapdict=1.0.1=pyhd3eb1b0_0
+  - icu=58.2=hf484d3e_1000
+  - importlib-metadata=4.11.4=py37h89c1867_0
+  - importlib_metadata=4.11.4=hd8ed1ab_0
+  - ipykernel=6.16.2=pyh210e3f2_0
+  - ipython=7.33.0=py37h89c1867_0
   - jedi=0.19.1=pyhd8ed1ab_0
-  - jinja2=3.1.4=pyhd8ed1ab_0
-  - jmespath=1.0.1=pyhd8ed1ab_0
-  - joblib=1.4.2=pyhd8ed1ab_0
-  - jupyter_client=8.6.2=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py312h7900ff3_0
-  - jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
+  - jinja2=3.1.2=py37h06a4308_0
+  - joblib=1.1.1=py37h06a4308_0
+  - jpeg=9e=h0b41bf4_3
+  - jupyter_client=7.4.9=pyhd8ed1ab_0
+  - jupyter_core=4.11.1=py37h89c1867_0
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py312h8572e83_1
+  - kiwisolver=1.4.4=py37h7cecad7_0
   - krb5=1.21.3=h659f571_0
-  - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.40=hf3520f5_7
+  - lcms2=2.14=h6ed2654_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
   - lerc=4.0.0=h27087fc_0
-  - libabseil=20240116.2=cxx17_he02047a_1
   - libaec=1.1.3=h59595ed_0
-  - libarrow=17.0.0=h03aeac6_7_cpu
-  - libarrow-acero=17.0.0=he02047a_7_cpu
-  - libarrow-dataset=17.0.0=he02047a_7_cpu
-  - libarrow-substrait=17.0.0=hc9a23c6_7_cpu
-  - libblas=3.9.0=23_linux64_openblas
-  - libbrotlicommon=1.1.0=hd590300_1
-  - libbrotlidec=1.1.0=hd590300_1
-  - libbrotlienc=1.1.0=hd590300_1
-  - libcblas=3.9.0=23_linux64_openblas
-  - libclang-cpp18.1=18.1.8=default_hf981a13_2
-  - libclang13=18.1.8=default_h9def88c_2
-  - libcrc32c=1.1.2=h9c3ff4c_0
-  - libcups=2.3.3=h4637d8d_4
-  - libcurl=8.9.1=hdb1bdb2_0
-  - libdeflate=1.21=h4bc722e_0
-  - libdrm=2.4.122=h4ab18f5_0
+  - libblas=3.9.0=25_linux64_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcblas=3.9.0=25_linux64_openblas
+  - libcurl=8.8.0=hca28451_1
+  - libdeflate=1.14=h166bdaf_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
-  - libevent=2.1.12=hf998b51_1
-  - libexpat=2.6.2=h59595ed_0
+  - libexpat=2.6.4=h5888daf_0
   - libffi=3.4.2=h7f98852_5
-  - libgcc=14.1.0=h77fa898_1
-  - libgcc-ng=14.1.0=h69a702a_1
-  - libgfortran-ng=14.1.0=h69a702a_0
-  - libgfortran5=14.1.0=hc5f4f2c_0
-  - libglib=2.80.3=h315aac3_2
-  - libgomp=14.1.0=h77fa898_1
-  - libgoogle-cloud=2.28.0=h26d7fe4_0
-  - libgoogle-cloud-storage=2.28.0=ha262f82_0
-  - libgrpc=1.62.2=h15f2491_0
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgfortran=14.2.0=h69a702a_1
+  - libgfortran-ng=14.2.0=h69a702a_1
+  - libgfortran5=14.2.0=hd5240d6_1
+  - libglib=2.80.2=hf974151_0
+  - libgomp=14.2.0=h77fa898_1
   - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=23_linux64_openblas
-  - libllvm14=14.0.6=hcd5def8_4
-  - libllvm18=18.1.8=h8b73ec9_2
-  - libnetcdf=4.9.2=nompi_h135f659_114
+  - liblapack=3.9.0=25_linux64_openblas
+  - liblzma=5.6.3=hb9d3cd8_1
+  - liblzma-devel=5.6.3=hb9d3cd8_1
+  - libnetcdf=4.8.1=nompi_h21705cb_104
   - libnghttp2=1.58.0=h47da74e_1
   - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.27=pthreads_hac2b453_1
-  - libparquet=17.0.0=haa1307c_7_cpu
-  - libpciaccess=0.18=hd590300_0
+  - libopenblas=0.3.28=pthreads_h94d23a6_1
   - libpng=1.6.43=h2797004_0
-  - libpq=16.4=h482b261_0
-  - libprotobuf=4.25.3=h08a7969_0
-  - libre2-11=2023.09.01=h5a48ba9_2
   - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
-  - libstdcxx=14.1.0=hc0a3c3a_1
-  - libstdcxx-ng=14.1.0=h4852527_1
-  - libthrift=0.20.0=hb90f79a_0
-  - libtiff=4.6.0=h46a8edc_4
-  - libutf8proc=2.8.0=h166bdaf_0
+  - libstdcxx=14.2.0=hc0a3c3a_1
+  - libstdcxx-ng=14.2.0=h4852527_1
+  - libtiff=4.4.0=h82bc61c_5
   - libuuid=2.38.1=h0b41bf4_0
   - libwebp-base=1.4.0=hd590300_0
-  - libxcb=1.16=hd590300_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxkbcommon=1.7.0=h2c5496b_1
-  - libxml2=2.12.7=he7c6b58_4
-  - libxslt=1.1.39=h76b75d6_0
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.9=h13577e0_2
   - libzip=1.10.1=h2629f0a_3
-  - libzlib=1.3.1=h4ab18f5_1
-  - llvmlite=0.43.0=py312h9c5d478_0
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lz4=4.3.3=py312h03f37cb_0
+  - libzlib=1.2.13=h4ab18f5_6
+  - locket=1.0.0=py37h06a4308_0
   - lz4-c=1.9.4=hcb278e6_0
-  - markupsafe=2.1.5=py312h98912ed_0
-  - matplotlib=3.9.1=py312h7900ff3_2
-  - matplotlib-base=3.9.1=py312h854627b_2
+  - lzo=2.10=hd590300_1001
+  - markupsafe=2.1.1=py37h7f8727e_0
+  - matplotlib=3.5.3=py37h89c1867_2
+  - matplotlib-base=3.5.3=py37hf395dca_2
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mpld3=0.5.10=pyhd8ed1ab_0
-  - msgpack-python=1.0.8=py312h2492b07_0
+  - msgpack-python=1.0.3=py37hd09550d_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.3.0=h70512c7_5
-  - mysql-libs=8.3.0=ha479ceb_5
-  - ncurses=6.5=h59595ed_0
+  - ncurses=6.5=he02047a_1
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - netcdf4=1.7.1=nompi_py312h21d6d8e_102
+  - netcdf4=1.6.2=py37h89d13dc_0
   - nomkl=1.0=h5ca1d4c_0
-  - numba=0.60.0=py312h83e6fd3_0
-  - numcodecs=0.13.0=py312h1df14c2_0
-  - numexpr=2.10.0=py312hf412c99_100
-  - numpy=2.0.1=py312h1103770_0
-  - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.3.2=hb9d3cd8_0
-  - orc=2.0.1=h17fec99_1
-  - packaging=24.1=pyhd8ed1ab_0
-  - pandas=2.2.2=py312h1d6d2e6_1
+  - numexpr=2.8.3=py37h85a3170_100
+  - numpy=1.21.6=py37h976b520_0
+  - openjpeg=2.5.0=h7d73246_1
+  - openssl=3.4.0=hb9d3cd8_0
+  - packaging=23.2=pyhd8ed1ab_0
+  - pandas=1.3.5=py37he8f5f7f_0
   - parso=0.8.4=pyhd8ed1ab_0
-  - partd=1.4.2=pyhd8ed1ab_0
-  - pathlib=1.0.1=py_1
-  - patsy=0.5.6=pyhd8ed1ab_0
-  - pcre2=10.44=hba22ea6_2
+  - partd=1.2.0=pyhd3eb1b0_1
+  - pathlib=1.0.1=py37h89c1867_6
+  - pcre2=10.43=hcad00b1_0
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
-  - pillow=10.4.0=py312h287a98d_0
-  - pip=24.2=pyhd8ed1ab_0
-  - pixman=0.43.2=h59595ed_0
-  - platformdirs=4.2.2=pyhd8ed1ab_0
-  - proj=9.4.1=h54d7996_1
-  - prompt-toolkit=3.0.47=pyha770c72_0
-  - psutil=6.0.0=py312h9a8786e_0
-  - pthread-stubs=0.4=h36c2ea0_1001
+  - pillow=9.2.0=py37h850a105_2
+  - pip=24.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
+  - psutil=5.9.3=py37h540881e_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
-  - pyarrow=17.0.0=py312h9cebb41_1
-  - pyarrow-core=17.0.0=py312h9cafe31_1_cpu
-  - pyarrow-hotfix=0.6=pyhd8ed1ab_0
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pyproj=3.6.1=py312h01329cd_8
-  - pyshp=2.3.1=pyhd8ed1ab_0
-  - pyside6=6.7.2=py312hb5137db_2
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pytables=3.10.1=py312h1d844bd_1
-  - python=3.12.5=h2ad013b_0_cpython
+  - pygments=2.17.2=pyhd8ed1ab_0
+  - pyparsing=3.1.4=pyhd8ed1ab_0
+  - pyqt=5.6.0=py37h13b7fb3_1008
+  - pytables=3.7.0=py37h7d129aa_2
+  - python=3.7.12=hf930737_100_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.12=4_cp312
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py312h41a817b_0
-  - pyzmq=26.1.0=py312h7ab5c7e_0
-  - qhull=2020.2=h434a139_5
-  - qt6-main=6.7.2=hb12f9c5_4
-  - re2=2023.09.01=h7f4b329_2
+  - python_abi=3.7=4_cp37m
+  - pytz=2024.2=pyhd8ed1ab_0
+  - pyyaml=6.0=py37h5eee18b_1
+  - pyzmq=24.0.1=py37h0c0c2a8_0
+  - qt=5.6.3=h8bf5577_3
   - readline=8.2=h8228510_1
-  - requests=2.32.3=pyhd8ed1ab_0
-  - s2n=1.5.0=h3400bea_0
-  - s3transfer=0.10.2=pyhd8ed1ab_0
-  - scikit-learn=1.5.1=py312h775a589_0
-  - scipy=1.14.0=py312hc2bc53b_1
-  - seaborn=0.13.2=hd8ed1ab_2
-  - seaborn-base=0.13.2=pyhd8ed1ab_2
-  - setuptools=72.1.0=pyhd8ed1ab_0
-  - shapely=2.0.5=py312h8413631_0
+  - scikit-learn=1.0.2=py37h51133e4_1
+  - scipy=1.7.3=py37hf838250_2
+  - setuptools=59.8.0=py37h89c1867_1
+  - sip=4.18.1=py37hf484d3e_1000
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.2.1=ha2e4443_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - sparse=0.15.4=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd3eb1b0_0
   - sqlite=3.46.0=h6d4b2fc_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.14.2=py312h085067d_0
-  - tblib=3.0.0=pyhd8ed1ab_0
-  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - tblib=1.7.0=pyhd3eb1b0_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.13=noxft_h4845f30_101
-  - toolz=0.12.1=pyhd8ed1ab_0
-  - tornado=6.4.1=py312h9a8786e_0
-  - tqdm=4.66.5=pyhd8ed1ab_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
-  - urllib3=2.2.2=pyhd8ed1ab_1
-  - wayland=1.23.0=h5291e77_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.11=pyhd8ed1ab_0
-  - xarray=2024.7.0=pyhd8ed1ab_0
-  - xcb-util=0.4.1=hb711507_2
-  - xcb-util-cursor=0.1.4=h4ab18f5_2
-  - xcb-util-image=0.4.0=hb711507_2
-  - xcb-util-keysyms=0.4.1=hb711507_0
-  - xcb-util-renderutil=0.3.10=hb711507_0
-  - xcb-util-wm=0.4.2=hb711507_0
-  - xkeyboard-config=2.42=h4ab18f5_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.9=hb711507_1
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.11=hd590300_0
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xyzservices=2024.6.0=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zarr=2.18.2=pyhd8ed1ab_0
+  - toolz=0.12.0=py37h06a4308_0
+  - tornado=6.2=py37h540881e_0
+  - tqdm=4.64.1=py37h06a4308_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - unicodedata2=14.0.0=py37h540881e_1
+  - wcwidth=0.2.10=pyhd8ed1ab_0
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xarray=0.20.2=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xz=5.6.3=hbcc6ac9_1
+  - xz-gpl-tools=5.6.3=hbcc6ac9_1
+  - xz-tools=5.6.3=hb9d3cd8_1
+  - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.5=h75354e8_4
-  - zict=3.0.0=pyhd8ed1ab_0
-  - zipp=3.20.0=pyhd8ed1ab_0
-  - zlib=1.3.1=h4ab18f5_1
-  - zlib-ng=2.2.2=h5888daf_0
-  - zstandard=0.23.0=py312h3483029_0
+  - zict=2.1.0=py37h06a4308_0
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h4ab18f5_6
   - zstd=1.5.6=ha6fb4c9_0
-  - pip:
-      - aiobotocore==2.15.1
-      - aiohappyeyeballs==2.4.0
-      - aiohttp==3.10.6
-      - aioitertools==0.12.0
-      - aiosignal==1.3.1
-      - attrs==24.2.0
-      - botocore==1.35.23
-      - bounded-pool-executor==0.0.3
-      - earthaccess==0.10.0
-      - frozenlist==1.4.1
-      - fsspec==2024.9.0
-      - h5coro==0.0.7
-      - importlib-resources==6.4.5
-      - multidict==6.1.0
-      - multimethod==1.12
-      - pqdm==0.2.0
-      - python-cmr==0.13.0
-      - s3fs==2024.9.0
-      - tinynetrc==1.3.1
-      - wrapt==1.16.0
-      - yarl==1.12.1
+prefix: /global/homes/j/jbbutler/.conda/envs/ar_tutorial_2
